# cyprus-fish-classifier

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  final_training.out  notebook.ipynb  pyproject.toml
.github/workflows/: push.sh  push.yaml  push.yml  test_docker.yaml
configs/: config.yaml
configs/data/: cyprus_fish.yaml
configs/model/: convnext_tiny.yaml
configs/prepare_data/: cyprus_fish.yaml
configs/processor/: convnext_tiny.yaml
configs/train/: default.yaml
data/: liste_des_poissons.txt
data/apognon/: images (1).jfif  images (10).jfif  images (11).jfif  images (12).jfif  images (13).jfif  images (14).jfif  images (15).jfif  images (16).jfif  images (17).jfif  images (18).jfif  images (19).jfif  images (2).jfif  images (20).jfif  images (21).jfif  images (22).jfif  images (23).jfif  images (24).jfif  images (25).jfif  images (26).jfif  images (27).jfif  images (28).jfif  images (29).jfif  images (3).jfif  images (30).jfif  images (32).jfif  images (33).jfif  images (34).jfif  images (35).jfif  images (36).jfif  images (38).jfif  images (4).jfif  images (5).jfif  images (6).jfif  images (7).jfif  images (8).jfif  images (9).jfif  images.jfif  téléchargement (1).jfif  téléchargement (10).jfif  téléchargement (11).jfif  (+17 more)
data/epinephelus marginatus/: epinephelus_marginatus01.jfif  epinephelus_marginatus02.jfif  epinephelus_marginatus03.jfif  epinephelus_marginatus04.jfif  epinephelus_marginatus05.jfif  epinephelus_marginatus06.jfif  epinephelus_marginatus07.jfif  epinephelus_marginatus09.jfif  epinephelus_marginatus10.jfif  epinephelus_marginatus11.jfif  epinephelus_marginatus12.jfif  epinephelus_marginatus13.jfif  epinephelus_marginatus14.jfif  epinephelus_marginatus15.jfif  epinephelus_marginatus16.jfif  epinephelus_marginatus17.jfif  epinephelus_marginatus18.jfif  epinephelus_marginatus19.jfif  epinephelus_marginatus20.jfif  epinephelus_marginatus21.jfif  epinephelus_marginatus22.jfif  epinephelus_marginatus23.jfif  epinephelus_marginatus24.jfif  epinephelus_marginatus25.jfif  epinephelus_marginatus26.jfif  epinephelus_marginatus27.jfif  epinephelus_marginatus28.jfif  epinephelus_marginatus29.jfif  epinephelus_marginatus30.jfif  epinephelus_marginatus31.jfif  epinephelus_marginatus32.jfif  epinephelus_marginatus33.jfif  epinephelus_marginatus35.jfif  epinephelus_marginatus36.jfif  epinephelus_marginatus37.jfif  epinephelus_marginatus38.jfif  epinephelus_marginatus39.jfif  epinephelus_marginatus40.jfif  epinephelus_marginatus41.jfif  epinephelus_marginatus42.jfif  (+23 more)
data/girelle paon/: images (1).jfif  images (10).jfif  images (11).jfif  images (12).jfif  images (13).jfif  (+85 more)
notebooks/: notebook.ipynb
scripts/: prepare_dataset.py  upload_dataset.py
tests/: conftest.py  test_data.py  test_predict_image.py  test_prepare_dataset.py
(+171 files in other folders)
